Done validation by using Formik and Yup at Login and signup form

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1013,13 +1013,12 @@ section {
 }
 
 .appointment .php-email-form .validate {
-  display: none;
   color: red;
   margin: 0 0 15px 0;
   font-weight: 400;
-  font-size: 13px;
+  font-size: 11px;
+  position: absolute;
 }
-
 .appointment .php-email-form .error-message {
   display: none;
   color: #fff;
