--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13,14 +13,21 @@ a:hover {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Raleway", sans-serif;
 }
+
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
+
 /*--------------------------------------------------------------
 # Preloader
 --------------------------------------------------------------*/
@@ -53,6 +60,7 @@ ul {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -62,6 +70,7 @@ ul {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -172,7 +181,7 @@ ul {
   top: 0;
 }
 
-#header .logo {
+.logo {
   font-size: 30px;
   margin: 0;
   padding: 0;
@@ -188,7 +197,7 @@ ul {
   float: right;
 }
 
-#header .logo a {
+.logo a {
   color: #2c4964;
   display: inline-block;
 }
@@ -199,7 +208,7 @@ ul {
   margin-top: 4px;
 }
 
-#header .logo img {
+.logo img {
   max-height: 40px;
 }
 
@@ -252,7 +261,7 @@ ul {
   position: relative;
 }
 
-.navbar > ul > li {
+.navbar>ul>li {
   position: relative;
   white-space: nowrap;
   padding: 8px 0 8px 16px;
@@ -276,7 +285,9 @@ ul {
   margin-left: 5px;
 }
 
-.navbar a:hover, .navbar .active, .navbar li:hover > a {
+.navbar a:hover,
+.navbar .active,
+.navbar li:hover>a {
   color: #FF6337;
   border-color: #FF6337;
 }
@@ -313,11 +324,13 @@ ul {
   font-size: 12px;
 }
 
-.navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
+.navbar .dropdown ul a:hover,
+.navbar .dropdown ul .active:hover,
+.navbar .dropdown ul li:hover>a {
   color: #FF6337;
 }
 
-.navbar .dropdown:hover > ul {
+.navbar .dropdown:hover>ul {
   opacity: 1;
   top: 100%;
   visibility: visible;
@@ -329,7 +342,7 @@ ul {
   visibility: hidden;
 }
 
-.navbar .dropdown .dropdown:hover > ul {
+.navbar .dropdown .dropdown:hover>ul {
   opacity: 1;
   top: 0;
   left: 100%;
@@ -340,7 +353,8 @@ ul {
   .navbar .dropdown .dropdown ul {
     left: -90%;
   }
-  .navbar .dropdown .dropdown:hover > ul {
+
+  .navbar .dropdown .dropdown:hover>ul {
     left: -100%;
   }
 }
@@ -365,6 +379,7 @@ ul {
   .mobile-nav-toggle {
     display: block;
   }
+
   .navbar ul {
     display: none;
   }
@@ -401,7 +416,7 @@ ul {
   transition: 0.3s;
 }
 
-.navbar-mobile > ul > li {
+.navbar-mobile>ul>li {
   padding: 0;
 }
 
@@ -412,7 +427,9 @@ ul {
   border: none;
 }
 
-.navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
+.navbar-mobile a:hover,
+.navbar-mobile .active,
+.navbar-mobile li:hover>a {
   color: #FF6337;
 }
 
@@ -444,11 +461,13 @@ ul {
   font-size: 12px;
 }
 
-.navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
+.navbar-mobile .dropdown ul a:hover,
+.navbar-mobile .dropdown ul .active:hover,
+.navbar-mobile .dropdown ul li:hover>a {
   color: #FF6337;
 }
 
-.navbar-mobile .dropdown > .dropdown-active {
+.navbar-mobile .dropdown>.dropdown-active {
   display: block;
 }
 
@@ -512,13 +531,16 @@ ul {
     margin-bottom: 0;
     height: 100vh;
   }
+
   #hero .container {
     padding-bottom: 63px;
   }
+
   #hero h1 {
     font-size: 28px;
     line-height: 36px;
   }
+
   #hero h2 {
     font-size: 18px;
     line-height: 24px;
@@ -580,9 +602,11 @@ section {
   bottom: 0;
   left: calc(50% - 20px);
 }
-.section-title h2 + p + p {
+
+.section-title h2+p+p {
   margin-bottom: 0;
 }
+
 /*--------------------------------------------------------------
 # Breadcrumbs
 --------------------------------------------------------------*/
@@ -620,11 +644,11 @@ section {
   font-size: 14px;
 }
 
-.breadcrumbs ol li + li {
+.breadcrumbs ol li+li {
   padding-left: 10px;
 }
 
-.breadcrumbs ol li + li::before {
+.breadcrumbs ol li+li::before {
   display: inline-block;
   padding-right: 10px;
   color: #6c757d;
@@ -635,9 +659,11 @@ section {
   .breadcrumbs .d-flex {
     display: block !important;
   }
+
   .breadcrumbs ol {
     display: block;
   }
+
   .breadcrumbs ol li {
     display: inline-block;
   }
@@ -859,6 +885,7 @@ section {
     transform: scale(0.6, 0.6);
     opacity: 1;
   }
+
   100% {
     transform: scale(1, 1);
     opacity: 0;
@@ -870,6 +897,7 @@ section {
     transform: scale(0.6, 0.6);
     opacity: 1;
   }
+
   100% {
     transform: scale(1, 1);
     opacity: 0;
@@ -997,7 +1025,8 @@ section {
   background: #FFA68B;
 }
 
-.services .icon-box:hover h4 a, .services .icon-box:hover p {
+.services .icon-box:hover h4 a,
+.services .icon-box:hover p {
   color: #fff;
 }
 
@@ -1019,6 +1048,7 @@ section {
   font-size: 11px;
   position: absolute;
 }
+
 .appointment .php-email-form .error-message {
   display: none;
   color: #fff;
@@ -1028,7 +1058,7 @@ section {
   font-weight: 600;
 }
 
-.appointment .php-email-form .error-message br + br {
+.appointment .php-email-form .error-message br+br {
   margin-top: 25px;
 }
 
@@ -1062,21 +1092,26 @@ section {
 }
 
 .abouttop {
-  margin-top:40px ;
+  margin-top: 40px;
 }
 
-.appointment .php-email-form input, .appointment .php-email-form textarea, .appointment .php-email-form select {
+.appointment .php-email-form input,
+.appointment .php-email-form textarea,
+.appointment .php-email-form select {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
   padding: 10px !important;
 }
 
-.appointment .php-email-form input:focus, .appointment .php-email-form textarea:focus, .appointment .php-email-form select:focus {
+.appointment .php-email-form input:focus,
+.appointment .php-email-form textarea:focus,
+.appointment .php-email-form select:focus {
   border-color: #FF6337;
 }
 
-.appointment .php-email-form input, .appointment .php-email-form select {
+.appointment .php-email-form input,
+.appointment .php-email-form select {
   height: 44px;
 }
 
@@ -1153,6 +1188,7 @@ section {
     border: 0;
     padding: 15px;
   }
+
   .departments .nav-link.active {
     color: #fff;
     background: #FF6337;
@@ -1172,6 +1208,7 @@ section {
   padding: 30px;
   border-radius: 10px;
 }
+
 .doctors .member * {
   color: #444444;
 }
@@ -1201,9 +1238,11 @@ section {
   font-size: 20px;
   color: #2c4964;
 }
+
 .doctor_details h4 {
   margin-top: 25px;
 }
+
 .doctors .member span {
   display: block;
   font-size: 15px;
@@ -1256,7 +1295,7 @@ section {
   background: #FF6337;
 }
 
-.doctors .member .social a + a {
+.doctors .member .social a+a {
   margin-left: 8px;
 }
 
@@ -1272,7 +1311,7 @@ section {
   list-style: none;
 }
 
-.faq .faq-list li + li {
+.faq .faq-list li+li {
   margin-top: 15px;
 }
 
@@ -1303,7 +1342,8 @@ section {
   color: #FF6337;
 }
 
-.faq .faq-list .icon-show, .faq .faq-list .icon-close {
+.faq .faq-list .icon-show,
+.faq .faq-list .icon-close {
   font-size: 24px;
   position: absolute;
   right: 0;
@@ -1379,7 +1419,8 @@ section {
   margin: 0;
 }
 
-.testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
+.testimonials .testimonial-item .quote-icon-left,
+.testimonials .testimonial-item .quote-icon-right {
   color: #FFC8B8;
   font-size: 26px;
 }
@@ -1423,10 +1464,12 @@ section {
   .testimonials .testimonial-wrap {
     padding-left: 0;
   }
+
   .testimonials .testimonial-item {
     padding: 30px;
     margin: 15px;
   }
+
   .testimonials .testimonial-item .testimonial-img {
     position: static;
     left: auto;
@@ -1487,11 +1530,14 @@ section {
   color: #4b7dab;
 }
 
-.contact .info .email, .contact .info .phone {
+.contact .info .email,
+.contact .info .phone {
   margin-top: 40px;
 }
 
-.contact .info .email:hover i, .contact .info .address:hover i, .contact .info .phone:hover i {
+.contact .info .email:hover i,
+.contact .info .address:hover i,
+.contact .info .phone:hover i {
   background: #FF6337;
   color: #fff;
 }
@@ -1514,7 +1560,7 @@ section {
   font-weight: 600;
 }
 
-.contact .php-email-form .error-message br + br {
+.contact .php-email-form .error-message br+br {
   margin-top: 25px;
 }
 
@@ -1547,7 +1593,8 @@ section {
   animation: animate-loading 1s linear infinite;
 }
 
-.contact .php-email-form input, .contact .php-email-form textarea {
+.contact .php-email-form input,
+.contact .php-email-form textarea {
   border-radius: 0;
   box-shadow: none;
   font-size: 14px;
@@ -1578,6 +1625,7 @@ section {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -1587,6 +1635,7 @@ section {
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
@@ -1783,11 +1832,13 @@ section {
 .doctor_details {
   padding: 75px 0;
 }
+
 .signature_image img {
   width: 150px;
   margin-top: 40px;
   margin-right: 0;
 }
+
 .doctor_details_image {
   max-width: 475px;
   text-align: center;
@@ -1796,12 +1847,14 @@ section {
   box-shadow: 0 10px 55px 5px rgba(44, 73, 100, 0.1);
   padding: 30px;
 }
+
 .doctor_details_image img {
   width: 100%;
   min-height: 325px;
   object-fit: cover;
   object-position: center;
 }
+
 .doctor_details_image span,
 .doctor_details .bottom_part .section-title span {
   display: block;
@@ -1809,17 +1862,21 @@ section {
   font-size: 14.5px;
   margin-top: 7px;
 }
+
 .doctor_details_image .social {
   margin-top: 25px;
 }
+
 .doctor_details_image .social li:first-child {
   margin-left: 0;
 }
+
 .doctor_details_image .social li {
   display: inline-block;
   margin-left: 2px;
   margin-right: 2px;
 }
+
 .doctor_details_image .social li a {
   display: block;
   color: #FF6337;
@@ -1832,32 +1889,39 @@ section {
   font-size: 14px;
   transition: 0.5s;
 }
+
 .doctor_details_image .social li a:hover {
   color: #ffffff;
   background-color: #FF6337;
   -webkit-transform: translateY(-2px);
   transform: translateY(-2px);
 }
+
 .doctor_details .section-title h2::before,
 .doctor_details .section-title h2::after {
   left: 0;
 }
+
 .doctor_details .section-title {
   margin-top: 25px;
   padding-bottom: 0;
 }
+
 .doctor_details .bottom_part {
   padding-top: 50px;
 }
+
 .skill_desc {
   margin: 0;
 }
+
 .skill_desc li {
   max-width: 33.33%;
   margin: 15px 0 0 0;
   padding: 0 0 0 35px;
   position: relative;
 }
+
 .skill_desc li::after {
   content: '';
   display: block;
@@ -1872,6 +1936,7 @@ section {
   border-radius: 2px;
   transition: 0.5s;
 }
+
 .skill_desc li::before {
   content: '';
   position: absolute;
@@ -1883,18 +1948,38 @@ section {
   border-radius: 70% 30% 30% 70% / 60% 40% 60% 40%;
   transition: 0.5s;
 }
+
 .skill_desc li:hover::before {
   background-color: #FF6337;
 }
+
 .skill_desc li:hover::after {
   border-color: #FFFFFF;
 }
 
-.contact .form-error {
+.form-error {
   color: #FF0000;
   font-size: 12px;
   position: absolute;
 }
-.contact .form-error::first-letter {
+
+.form-error::first-letter {
   text-transform: uppercase;
+}
+
+.logo-admin {
+  font-size: 30px;
+  float: none;
+  margin: 0;
+}
+
+.logo-admin span {
+  font-size: 20px;
+}
+
+input {
+  appearance: none;
+}
+.app_items a:hover {
+  color: inherit;
 }
