--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1962,7 +1962,6 @@ input {
 }
 .data_table [role="rowgroup"] {
   background-color: rgba(0, 0, 0, 0.04);
-  /* width: 100%; */
 }
 .data_table div[aria-label],
 .data_table div[data-field="id"] .MuiDataGrid-cellContent {
@@ -1977,10 +1976,10 @@ input {
 .MuiDataGrid-root .MuiDataGrid-cell:focus-within {
   outline: none !important;
 }
-.more_about_medi {
+.more_about_medi button {
   position: absolute;
-  bottom: 0;
-  left: 0;
+  bottom: 24px;
+  left: 24px;
 }
 .serach_icon {
   right: 15px;
