--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -118,7 +118,7 @@ ul {
 --------------------------------------------------------------*/
 #topbar {
   background: #fff;
-  height: 40px;
+  height: 50px;
   font-size: 14px;
   transition: all 0.5s;
   z-index: 996;
@@ -173,12 +173,8 @@ ul {
   transition: all 0.5s;
   z-index: 997;
   padding: 15px 0;
-  top: 40px;
+  top: 50px;
   box-shadow: 0px 2px 15px rgba(25, 119, 204, 0.1);
-}
-
-#header.header-scrolled {
-  top: 0;
 }
 
 .logo {
@@ -1783,7 +1779,7 @@ section {
 }
 
 .main-header {
-  height: 138px;
+  height: 131px;
 }
 
 
@@ -1985,4 +1981,23 @@ input {
   right: 15px;
   top: 50%;
   transform: translateY(-50%);
+}
+.css-pwyk3z-MuiBadge-badge {
+  transform: scale(0.9) translate(50%, -50%) !important;
+}
+.dark #topbar {
+  background-color: #192837;
+}
+.dark #header {
+  background-color: #2c4964;
+}
+.dark #topbar *:not(i),
+.dark .logo,
+.dark #navbar a {
+  color: #FFFFFF;
+  border-color: transparent;
+}
+.dark #navbar a:hover {
+  color: #FF6337;
+  border-color: #FF6337;
 }
