--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,6 +1,8 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
+  overflow-y: scroll !important;
+  padding-right: 0 !important;
 }
 
 a {
@@ -517,6 +519,9 @@ main {
     font-size: 18px;
     line-height: 24px;
     margin-bottom: 30px;
+  }
+  #topbar {
+    font-size: 12px4;
   }
 }
 
@@ -1985,20 +1990,22 @@ input {
 }
 
 .data_table [role="rowgroup"],
-.user_data_table [role="rowgroup"]  {
+.user_data_table [role="rowgroup"] {
   background-color: rgba(0, 0, 0, 0.04);
 }
 
 .data_table div[aria-label],
 .data_table div[data-field="id"] .MuiDataGrid-cellContent,
 .user_data_table div[aria-label],
-.user_data_table div[data-field="id"] .MuiDataGrid-cellContent  {
+.user_data_table div[data-field="id"] .MuiDataGrid-cellContent {
   text-transform: uppercase;
   font-weight: 600;
 }
+
 .user_data_table .MuiDataGrid-cellContent {
   font-size: 0.8rem;
 }
+
 .MuiDataGrid-root .MuiDataGrid-columnHeader:not(:last-child),
 .MuiDataGrid-root .MuiDataGrid-cell:not(:last-child) {
   border-right: 1px solid rgba(224, 224, 224, 1);
@@ -2014,6 +2021,7 @@ input {
   bottom: 24px;
   left: 24px;
 }
+
 .more_about_medi a {
   position: absolute;
   bottom: 24px;
@@ -2087,11 +2095,13 @@ input {
 .dark #alert-dialog-description {
   color: #444444 !important;
 }
+
 .dark .doctor_details .bottom_part span,
 .dark .medicine_details .bottom_part span,
 .dark .medicine_details b {
   color: #FF6337;
 }
+
 .dark #navbar a:hover,
 .dark .departments .nav-link.active {
   color: #FF6337 !important;
@@ -2106,6 +2116,7 @@ input {
 .dark .user_data_table * {
   color: #f7f7f7 !important;
 }
+
 .dark .orange_tab button.MuiTab-textColorPrimary {
   color: #F7F7F7;
 }
@@ -2113,23 +2124,27 @@ input {
 .dark .signature_image img {
   filter: invert(100%);
 }
-.orange_tab button{
+
+.orange_tab button {
   font-family: "Open Sans", sans-serif !important;
   text-transform: capitalize;
 }
+
 body .orange_tab button.Mui-selected,
-.dark .user_data_table div[aria-label]  {
-    color: #FF6337 !important;
+.dark .user_data_table div[aria-label] {
+  color: #FF6337 !important;
 }
+
 body .orange_tab .MuiTabs-indicator {
   background-color: #FF6337 !important;
 }
 
-@media only screen and (min-width: 1200px)  {
+@media only screen and (min-width: 1200px) {
   .navbar-mobile {
     transform: scale(0) !important;
   }
 }
+
 @media only screen and (max-width: 1199.98px) {
   #navbar {
     transform: scale(0);
@@ -2137,23 +2152,28 @@ body .orange_tab .MuiTabs-indicator {
     backdrop-filter: blur(3px);
     justify-content: center;
   }
-  #navbar ul li:last-child > * {
+
+  #navbar ul li:last-child>* {
     max-width: 100%;
     margin: 20px auto 0;
   }
+
   #navbar * {
     color: #ffffff !important;
   }
+
   #navbar li {
     margin-bottom: 5px;
     text-align: center;
   }
+
   #navbar li a {
     justify-content: center;
   }
 }
 
 @media only screen and (max-width: 991.98px) {
+
   .doctor_details_image,
   .medicine_details_image {
     margin-bottom: 50px;
@@ -2179,6 +2199,7 @@ body .orange_tab .MuiTabs-indicator {
 }
 
 @media only screen and (max-width: 767.98px) {
+
   body,
   #alert-dialog-description {
     font-size: 0.9rem;
@@ -2196,6 +2217,7 @@ body .orange_tab .MuiTabs-indicator {
   .contact .info h4 {
     font-size: 18px;
   }
+
   #alert-dialog-title {
     font-size: 24px;
   }
@@ -2203,12 +2225,66 @@ body .orange_tab .MuiTabs-indicator {
   .main-header {
     height: 125px;
   }
+
   main {
     padding-bottom: 10px;
   }
+
   #cart .card-body button.bg-transparent {
     position: absolute;
     right: 20px;
     top: 20px;
+  }
+}
+
+.mobile_nav_modal_close {
+  right: 20px;
+  top: 20px;
+  cursor: pointer;
+}
+
+.profile_img input,
+.profile_img img {
+  width: 100px;
+  height: 100px !important;
+}
+
+.profile_img input {
+  opacity: 0;
+  cursor: pointer;
+}
+
+.profile_img span {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.profile_img img {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  object-position: center;
+  object-fit: cover;
+}
+
+.splash h1 {
+  color: #FF6337;
+  font-size: 120px;
+}
+
+.splash span {
+  color: #082744;
+  font-weight: bold;
+  font-size: 30px;
+  margin: 0 0.5%;
+}
+
+@media only screen and (max-width: 767.98px) {
+  .splash h1 {
+    font-size: 60fpx;
+  }
+  .splash span {
+    font-size: 20px;
   }
 }
